# stm32-embassy

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: main.rs
